--- a/my-nuxt/package.json
+++ b/my-nuxt/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "cross-env": "^5.2.0",
-    "nuxt": "^2.4.0",
-    "express": "^4.16.4"
+    "element-ui": "^2.9.1",
+    "express": "^4.16.4",
+    "nuxt": "^2.4.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9"
+    "node-sass": "^4.12.0",
+    "nodemon": "^1.18.9",
+    "sass-loader": "^7.1.0"
   }
 }
