--- a/my-nuxt/package.json
+++ b/my-nuxt/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "cross-env": "^5.2.0",
     "element-ui": "^2.9.1",
     "express": "^4.16.4",
