--- a/my-nuxt/package.json
+++ b/my-nuxt/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "cookie-universal-nuxt": "^2.0.16",
     "cross-env": "^5.2.0",
     "element-ui": "^2.9.1",
     "express": "^4.16.4",
