--- a/my-nuxt/package.json
+++ b/my-nuxt/package.json
@@ -11,12 +11,16 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.5.4",
+    "@nuxtjs/proxy": "^1.3.3",
     "axios": "^0.19.0",
+    "bignumber.js": "^8.1.1",
     "cookie-universal-nuxt": "^2.0.16",
     "cross-env": "^5.2.0",
     "element-ui": "^2.9.1",
     "express": "^4.16.4",
-    "nuxt": "^2.4.0"
+    "nuxt": "^2.4.0",
+    "vue-infinite-scroll": "^2.0.2"
   },
   "devDependencies": {
     "node-sass": "^4.12.0",
